--- a/index.html
+++ b/index.html
@@ -109,25 +109,23 @@
                 <div class="product-list">
                     <button class="arrowup"></button>
                     <ul>
-                        <div class="circle circle-01"></div>
+                        <div class="circle"></div>
                         <div class="product-01">
                         <li>Lace Frontals</li>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate minima sit fugit, adipisci enim quasi eaque molestiae autem qui corporis eveniet odio molestias alias 
                   </p>
                     </div>
-                  <div class="circle circle-02"></div>
+                  <div class="circle"></div>
                   <div class="product-01">
                         <li>Hair Products</li>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, veniam? Nostrum libero ipsum at eaque eligendi enim pariatur dolorem distinctio esse inventore, tempora quis reprehenderit blanditiis, omnis vero reiciendis placeat!
                         Suscipit hic neque quibusdam iure excepturi, unde eum odio assumenda magnam beatae, numquam quis ipsum eaque aperiam, cumque reprehenderit velit corrupti? Molestiae, quo. </p>
                         </div>
-                     
-                        <div class="circle circle-03"></div>
+                        <div class="circle"></div>
                         <div class="product-01">
                         <li>Wigs</li>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus nobis rem alias ex ea aspernatur exercitationem accusantium neque nemo explicabo, deleniti sit ad mollitia, asperiores dolorem quisquam? Dignissimos, aperiam </p>
                     </div>
-                    
                     <button class="arrowdown"></button>
                     </ul>
                 </div>
