Added Menu Information

--- a/index.html
+++ b/index.html
@@ -45,49 +45,49 @@
                 <div class="menu-pic">
                     <h4 class="menu-text">Color</h4>
                     <p class="prices">
-                        Foils $80+ <br>Ombre'/Balayage $180-$200 <br> Tint $70 <br>Toner $30
+                        Foils $80+ <br>Ombre'/Balayage $180-$200 <br> Tint $70 <br>Toner $30 <br> Combo Color Package $350-$500 <br>Permanent Color $50 <br>Semi-permanent Color $20
                     </p>
                 </div>
                 <div class="menu-pic">
                     <h4 class="menu-text">Styling</h4>
                     <p class="prices">
-                        Blah $100 <br>Blah $100 <br> Blah $100 <br>Blah $100 <br>Blah $100
+                        Blow out $50 <br>Flat Iron $50 <br> Updo $150 <br>Basic Wash $20 <br> 
                     </p>
                 </div>
                 <div class="menu-pic">
                     <h4 class="menu-text">Cut</h4>
                     <p class="prices">
-                        Blah $100 <br>Blah $100 <br> Blah $100 <br>Blah $100 <br>Blah $100
+                        Trim & Wash $50 <br> Big Chop $50 <br> Styled Cut $20
                     </p>
                 </div>
                 <div class="menu-pic">
-                    <h4 class="menu-text">Wash</h4>
+                    <h4 class="menu-text">Braids</h4>
                     <p class="prices">
-                        Blah $100 <br>Blah $100 <br> Blah $100 <br>Blah $100 <br>Blah $100
+                        Micro/Tree $180 <br> Box Braids (SM-LG) $150-$180 <br> Kinky Twists $180 <br> Havana/Spring/ Nubian Twist $180 <br> Sew in $120 <br> Locs $100-450 <br>Cornrows $50 <br>Crochet Braids $130 <br> Kids $50
                     </p>
                 </div>
                 <div class="menu-pic">
                     <h4 class="menu-text">Mens</h4>
                     <p class="prices">
-                        Blah $100 <br>Blah $100 <br> Blah $100 <br>Blah $100 <br>Blah $100
+                        Deluxe Hair cut $25 <br> Hot Shave $30 <br> Beard Trim $10 <br>Permanent Hair Color $30 <br> Signature Hot Shave $55 (includes facial)
                     </p>
                 </div>
                 <div class="menu-pic">
                     <h4 class="menu-text">Treatment</h4>
                     <p class="prices">
-                        Blah $100 <br>Blah $100 <br> Blah $100 <br>Blah $100 <br>Blah $100
+                        Deep Condition $80 <br> Hair Mask $60 <br>Retouch Treatment $50 <br> Chemical Repair $45 <br> Dandruff Treatment $70 <br> Heat Damag Repair (3 sessions) $15 each
                     </p>
                 </div>
                 <div class="menu-pic">
-                    <h4 class="menu-text">Chemical</h4>
+                    <h4 class="menu-text">Spa</h4>
                     <p class="prices">
-                        Blah $100 <br>Blah $100 <br> Blah $100 <br>Blah $100 <br>Blah $100
+                        Deep Cleaning Facial $80 <br> Vitamin C Wash $120 <br>Acne Treatment $300 <br>Waxing $60-$250 
                     </p>
                 </div>
                 <div class="menu-pic">
                     <h4 class="menu-text">Extension</h4>
                     <p class="prices">
-                        Blah $100 <br>Blah $100 <br> Blah $100 <br>Blah $100 <br>Blah $100
+                        Full sew in $120 <br> Sew w/leave out $150 <br> Lacefrontal Install $150 <br> Wig $100 <br> Full Cut and style bob $350 Lacefrontal Removal $50
                     </p>
                 </div>
                 <!-- <div class="menu-pic">
@@ -185,15 +185,15 @@
             <div class="review-area">
                 <div class="review one">
                     <img src="./images/profile-img.png" alt="Photo">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam facere saepe, corporis neque veritatis eum doloribus a doloremque!</p>
+                    <p>"I love this salon. Why? They definetely are quick and affordable. They have amazing customer service and I ALWAYS feel welcomed. They have restored my hair and my hair is the healthiest it has ever been."</p>
                 </div>
                 <div class="review two">
                     <img src="./images/profile-img.png" alt="Photo">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam facere saepe, corporis neque veritatis eum doloribus a doloremque !</p>
+                    <p>"My experience with Kinks n Kurls has been amazing. My natural hair journey  has been crazy and I was giving up on my hair. I booked a last minute appointment and walked out a new women."</p>
                 </div>
                 <div class="review three">
                     <img src="./images/profile-img.png" alt="Photo">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam facere saepe, corporis neque veritatis eum doloribus a doloremque!</p>
+                    <p>"PLEASE PLEASE PLEASE visit this salon and have the ladies hook your hair up ! The vibes there make you never want to leave. I have been going there for 13 years. I haven't had a bad hair day ever since!"</p>
                 </div>
             </div>
             <!-- end of reviews -->
@@ -213,6 +213,7 @@
         </div>
         <!-- end of gallery -->
         <div id="contact" class="section contact">
+            <h2 class="sectionhead section-05-head">Contact-Us</h2>
             <div class="contact-content">
                 <form action="Contact-Us"
                         method="post"
