--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="menu-pic">
                     <h4 class="menu-text">Cut</h4>
                     <p class="prices">
-                        Trim & Wash $50 <br> Big Chop $50 <br> Styled Cut $20
+                        Trim/Wash $50 <br> Big Chop $50 <br> Styled Cut $20
                     </p>
                 </div>
                 <div class="menu-pic">
