--- a/index.html
+++ b/index.html
@@ -289,6 +289,29 @@
                     <option value="application">Application</option>
                 </select>
                 <br>
+                <fieldset>
+                        <legend>Appointment details</legend>
+                    
+                        <div class="appt">
+                            <label for="appt-time">Date:</label>
+                            <input type="date" name="bday" min="2000-01-02"><br><br>
+                            <label for="appt-time">Time:</label>
+                            <input type="time" id="appt-time" name="appt-time"
+                                   min="9:00" max="18:00" required />
+                            <p>For same day please call</p>
+                        </div>
+                    
+                        <div class="appt">
+                            <label for="stylist">Stylist</label>
+                            <select id="stylist">
+                                <option value="unknown"></option>
+                                <option value="kellysimpson">Kelly Simpson (Available Tuesday- Saturday)</option>
+                                <option value="ashlessbrown">Ashlee Brown (Available Wednesday-Saturday)</option>
+                                <option value="ginelawson">Gina Lawson (Walk-ins only)</option>
+                            </select>
+                        </div>
+                </fieldset>
+                <br>
                 <div class="chk-box">
                     <input type="checkbox"
                            name="subscribe"
