--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
             </div>
             <!-- end of reviews -->
             <div id="gallery" class="gallery-area">
-                <h2 class="gallery-header">Blah Blah Blah Blah </h2>
-                <p class="gallery-header">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate hic similique soluta molestiae voluptatibus, iure voluptas ab perspiciatis provident aspernatur laborum odit sed in error suscipit fugit ea modi consequuntur.</p>
+                <h2 class="gallery-header">Follow Us On Instragram! </h2>
+                <p class="gallery-header">take a pic of how cute you look after visiting our salon + use the hashtag #kinkygirl to get featured here!</p>
                 <div class="images">
                     <!-- <p><i class="arrow left"></i></p>     -->
                     <img src="./images/placeholder-150x150.png" alt="Gallery Photos" class="img-gal">
