--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
     <div class="wrapper">
+        <header>
+                <a href="./bahamas-responsive.html" class="logo"><img src="images/Exploring-bahamas-logo.png" width="137" height="54" alt="Logo-Bahamas"></a>
+                <button class="hamburger-menu">
+                    <span class="hamburger-menu-content" tabindex="-1">
+                        <span class="sr-only"></span>
+                        <span class="bar"></span>
+                    </span>
+                </button>
          <nav>
             <ul>
                 <li><a href="#services"> Services</a></li>
@@ -19,6 +27,7 @@
                 <li><a href="#booknow">Book now</a></li>
             </ul>
         </nav>
+    </header>
         <div class="filler-header-pink">
                 <!-- <img src="./images/cutout-skai.png" alt="Skai" class="img-01"> -->
                 <img src="./images/big-cutout-skai.png" alt="Skai-two" class="img-02">
