--- a/index.html
+++ b/index.html
@@ -235,29 +235,29 @@
             <h2 class="sectionhead section-04-head">Reviews</h2>
             <div class="review-area">
                 <div class="review one">
-                    <img src="./images/profile-img.png" alt="Photo">
+                    <img src="./images/review-one.jpg" alt="Photo">
                     <p>"I love this salon. Why? They definetely are quick and affordable. They have amazing customer service and I ALWAYS feel welcomed. They have restored my hair and my hair is the healthiest it has ever been."</p>
                 </div>
                 <div class="review two">
-                    <img src="./images/profile-img.png" alt="Photo">
+                    <img src="./images/review-two.jpg" alt="Photo">
                     <p>"My experience with Kinks n Kurls has been amazing. My natural hair journey  has been crazy and I was giving up on my hair. I booked a last minute appointment and walked out a new women."</p>
                 </div>
                 <div class="review three">
-                    <img src="./images/profile-img.png" alt="Photo">
-                    <p>"PLEASE PLEASE PLEASE visit this salon and have the ladies hook your hair up ! The vibes there make you never want to leave. I have been going there for 13 years. I haven't had a bad hair day ever since!"</p>
+                    <img src="./images/review-three.jpg" alt="Photo">
+                    <p>"PLEASE PLEASE PLEASE visit this salon and have the ladies hook your hair up ! I have been going there for 13 years. I haven't had a bad hair day ever since!"</p>
                 </div>
             </div>
             <!-- end of reviews -->
             <div id="gallery" class="gallery-area">
                 <h2 class="gallery-header">Follow Us On Instragram! </h2>
-                <p class="gallery-header">take a pic of how cute you look after visiting our salon + use the hashtag #kinkygirl to get featured here!</p>
+                <p class="gallery-header">Take a pic of how cute you look after visiting our salon + use the hashtag #kinkygirl to get featured here!</p>
                 <div class="images">
                     <!-- <p><i class="arrow left"></i></p>     -->
-                    <img src="./images/placeholder-150x150.png" alt="Gallery Photos" class="img-gal">
-                    <img src="./images/placeholder-150x150.png" alt="Gallery Photos" class="img-gal">
-                    <img src="./images/placeholder-150x150.png" alt="Gallery Photos" class="img-gal">
-                    <img src="./images/placeholder-150x150.png" alt="Gallery Photos" class="img-gal">
-                    <img src="./images/placeholder-150x150.png" alt="Gallery Photos" class="img-gal">
+                    <img src="./images/gram-img1.jpg" alt="Gallery Photos" class="img-gal">
+                    <img src="./images/gram-img2.jpg" alt="Gallery Photos" class="img-gal">
+                    <img src="./images/gram-img3.jpg" alt="Gallery Photos" class="img-gal">
+                    <img src="./images/gram-img4.jpg" alt="Gallery Photos" class="img-gal">
+                    <img src="./images/gram-img-5.jpg" alt="Gallery Photos" class="img-gal">
                     <!-- <p><i class="arrow right"></i></p> -->
                 </div>
             </div>
