Added Application link and made html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
         </nav>
         <div class="filler-header-pink">
-                <!-- <img src="./images/cutout-skai.png" alt="Skai" class="img-01"> -->
+                <img src="./images/cutout-skai.png" alt="Skai" class="img-01">
                 <img src="./images/big-cutout-skai.png" alt="Skai-two" class="img-02">
                 <!-- <img src="./images/Asset 5.svg" alt="whitespace" class="whitespace">         -->
                 <div class="bighead">
@@ -226,7 +226,10 @@
                      <br>If you are interested in being part of a salon that offers a team oriented culture and a focus on providing customers with outstanding service; we would love to discuss career opportunities with you!<br>
                             
                      <br>Job Type: Full-time</p>
-                    <button class="apply-btn">Apply Now</button>
+                    
+                    <form method="get" action="./jobapp.html" class="apply">
+                        <button class="apply-btn" >Apply Now</button>
+                    </form>
                 </div>
             </div>
         </div>
