--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div class="filler-header-pink">
                 <img src="./images/cutout-skai.png" alt="Skai" class="img-01">
                 <img src="./images/big-cutout-skai.png" alt="Skai-two" class="img-02">
+                <!-- <img src="./images/flower-head.png" alt="Flowers" class="flowerdecor"> -->
                 <!-- <img src="./images/Asset 5.svg" alt="whitespace" class="whitespace">         -->
                 <div class="bighead">
                     <!-- <img src="./images/Asset 3.svg" alt="swoop" class="swoop"> -->
