--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kinks N' Curls</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
@@ -274,7 +275,7 @@
         </div>
         <!-- end of gallery -->
         <div id="contact" class="section contact">
-            <h2 class="sectionhead section-05-head">Contact-Us</h2>
+            <h2 class="sectionhead section-05-head">Contact Us</h2>
             <div class="contact-content">
                 <form action="Contact-Us"
                         method="post"
@@ -351,7 +352,7 @@
                 </select>
                 <br>
                 <fieldset>
-                        <legend>Appointme nt details</legend>
+                        <legend>Appointment details</legend>
                     
                         <div class="appt">
                             <label for="appt-time">Date:</label>
