fonts and sections
added fonts and tweaked little things in sections.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kinks N' Curls</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Varela+Round" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Libre+Baskerville|Montserrat|Roboto+Slab|Source+Serif+Pro" rel="stylesheet">
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
@@ -134,7 +134,7 @@
                     </p>
                 </div>
                 <div class="menu-pic">
-                    <h4 class="menu-text">Extension</h4>
+                    <h4 class="menu-text">Extensions</h4>
                     <p class="prices">
                             <br>
                             <br>
