changes to spelling

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <br>
                             <br>
                             <br>
-                        Deep Condition $80 <br> Hair Mask $60 <br>Retouch Treatment $50 <br> Chemical Repair $45 <br> Dandruff Treatment $70 <br> Heat Damag Repair (3 sessions) $15 each
+                        Deep Condition $80 <br> Hair Mask $60 <br>Retouch Treatment $50 <br> Chemical Repair $45 <br> Dandruff Treatment $70 <br> Heat Damage Repair (3 sessions) $15 each
                     </p>
                 </div>
                 <div class="menu-pic">
