--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </nav>
         <div class="replace"> 
         <div class="filler-header-pink">
-                <!-- <img src="./images/cutout-skai.png" alt="Skai" class="img-01"> -->
+                <img src="./images/cutout-skai.png" alt="Skai" class="img-01">
                 <picture ><source srcset="./images/pink-cutout-skai.jpg" 
                     media="(max-width:1000px)" style="width: 100%"><img src="./images/big-cutout-skai.png" alt="Skai-two" class="img-02"
                     ></picture>
@@ -216,8 +216,8 @@
                     We stock the widest variety of quality international hair brands available anywhere in Canada.<br>
                     <br>Kinks N'Curls was founded in 2014 after our founder, Kelly, had many failed attempts of trying to find the right hairstylist who knew how to bring a natural, neat, fast, affordable, and professional braiding experience. Being a self-taught stylist, she decided to venture out and create the experience for other women that she was never able to find in BC. As she progressed in the field, she started to gain popularity amongst various blogs and gained over 10k Instagram followers within the time frame of 6 months when her feed-in braid technique went viral. Currently, Kinks N'Curls is featured in ‘New York Times Magazine for Cultural Women’ and various influential platforms worldwide.</p>
                 
-                <img src="images/salon.jpg">
-                <img src="images/salon3.jpg">
+                <img src="images/salon.jpg" style="width: 100%" >
+                <img src="images/salon3.jpg" style="width: 100%">
                 </div>
                 <div class="join">
                     <h4>Join the Team!</h4>
