--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                 <img src="images/pic3.png" alt="Hippie Girl">
                 <div class="circle">
                 <ul>
-                    <img src="images/products/lacefrontal.png" alt="Lace Frontals"><li class="circle-01"></li>
-                    <img src="images/products/cantu.jpeg" alt="Cantu Shea Moisture"><li class="circle-02"></li>
-                    <img src="images/products/360lace.jpg" alt="360 Lace Wigs"><li class="circle-03"></li>
+                    <img src="images/lacefrontal.png" alt="Lace Frontals"><li class="circle-01"></li>
+                    <img src="images/cantu.jpeg" alt="Cantu Shea Moisture"><li class="circle-02"></li>
+                    <img src="images/360lace.jpg" alt="360 Lace Wigs"><li class="circle-03"></li>
                 </ul>
                 </div>
                 <!--arrows
