Changed text to C

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 </div>
                 <div class="review two">
                     <img src="./images/review-two.jpg" alt="Photo" class="rev-pic">
-                    <p>"My experience with Kinks n Kurls has been amazing. My natural hair journey  has been crazy and I was giving up on my hair. I booked a last minute appointment and walked out a new women."</p>
+                    <p>"My experience with Kinks n Curls has been amazing. My natural hair journey  has been crazy and I was giving up on my hair. I booked a last minute appointment and walked out a new women."</p>
                 </div>
                 <div class="review three">
                     <img src="./images/review-three.jpg" alt="Photo" class="rev-pic">
@@ -261,7 +261,7 @@
                         id="form">
                 <!-- <h4 class="message">Send us a message</h4> -->
                 <address>
-                    Kinks n' Kurls<br/>
+                    Kinks n' Curls<br/>
                     2354 Pacific Coast Highway<br/>
                     California, USA<br/>
                     +311-555-2368<br/>
